# week_7_cpp_exercises

./: README.md
array_examples/: CMakeLists.txt
array_examples/source/: structs_and_arrays.cpp
map_examples/: Responses.md  SortedList.h  Table.h  Tree.h
matrix_examples/: CMakeLists.txt
matrix_examples/include/: matrix_maths.h
matrix_examples/source/: matrix_operations.cpp
sorting_examples/: CMakeLists.txt
sorting_examples/include/: sorting.h
sorting_examples/source/: sorting_timing.cpp
sum_examples/: CMakeLists.txt  Responses.md
sum_examples/include/: Summing.h
sum_examples/source/: CMakeLists.txt  Summation.cpp
